# parameterized-typesystems

./: README.md  parameterized-typesystems.cabal  stack.yaml
src/Control/: Typecheckable.hs
src/Control/Typecheckable/: PureTypecheckable.hs
